--- a/05- Sass/index.html
+++ b/05- Sass/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Sass</h1>
-    <p>Sass es un preprocesador Css muy popular y potente</p>
+    <p>Sass es un preprocesador Cssgi muy popular y potente</p>
 </body>
 </html>
