anidacion en css

--- a/05- Sass/index.html
+++ b/05- Sass/index.html
@@ -9,5 +9,16 @@
 <body>
     <h1>Sass</h1>
     <p>Sass es un preprocesador Cssgi muy popular y potente</p>
+    <div class="caja">
+        <h1>Soy una caja</h1>
+        <p>Soy un parrafo</p>
+        <div class="info">
+            30-01-2021
+            <span class="author">
+                Santiago Alvarez
+            </span>
+        </div>
+        
+    </div>
 </body>
 </html>
