Herencia en SASS

--- a/05- Sass/index.html
+++ b/05- Sass/index.html
@@ -25,7 +25,8 @@
                 <li>Styluss</li>
             </ul>
         </div>
-        
     </div>
+    <div class="alert">Alert</div>
+    <div class="alert alert-danger">Alert Danger</div>
 </body>
 </html>
