--- a/05- Sass/index.html
+++ b/05- Sass/index.html
@@ -1,32 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Sass</title>
 </head>
+
 <body>
     <h1>Sass</h1>
     <p>Sass es un preprocesador Cssgi muy popular y potente</p>
-    <div class="caja">
-        <h1>Soy una caja</h1>
-        <p>Soy un parrafo</p>
-        <div class="info">
-            30-01-2021
-            <span class="author">
-                Santiago Alvarez
-            </span>
+    <div class="cajas">
+        <div class="caja">
+            <h1>Soy una caja</h1>
+            <p>Soy un parrafo</p>
+            <div class="info">
+                30-01-2021
+                <span class="author">
+                    Santiago Alvarez
+                </span>
+            </div>
+            <div class="listado">
+                <ul>
+                    <li>Sass</li>
+                    <li>Less</li>
+                    <li>Styluss</li>
+                </ul>
+            </div>
         </div>
-        <div class="listado">
-            <ul>
-                <li>Sass</li>
-                <li>Less</li>
-                <li>Styluss</li>
-            </ul>
+        <div class="caja">
+            <h1>Soy una caja</h1>
+            <p>Soy un parrafo</p>
+            <div class="info">
+                30-01-2021
+                <span class="author">
+                    Santiago Alvarez
+                </span>
+            </div>
+            <div class="listado">
+                <ul>
+                    <li>Sass</li>
+                    <li>Less</li>
+                    <li>Styluss</li>
+                </ul>
+            </div>
         </div>
+        <div class="caja">
+            <h1>Soy una caja</h1>
+            <p>Soy un parrafo</p>
+            <div class="info">
+                30-01-2021
+                <span class="author">
+                    Santiago Alvarez
+                </span>
+            </div>
+            <div class="listado">
+                <ul>
+                    <li>Sass</li>
+                    <li>Less</li>
+                    <li>Styluss</li>
+                </ul>
+            </div>
+        </div>
+        <div class="clearfix"></div>
     </div>
+
     <div class="alert">Alert</div>
     <div class="alert alert-danger">Alert Danger</div>
 </body>
+
 </html>
