flex-wrap y flex-flow

--- a/07-Flexbox/index.html
+++ b/07-Flexbox/index.html
@@ -15,6 +15,18 @@
             <div class="caja green">caja green</div>
             <div class="caja blue">caja blue</div>
             <div class="caja orange">caja orange</div>
+            <div class="caja red">caja red</div>
+            <div class="caja green">caja green</div>
+            <div class="caja blue">caja blue</div>
+            <div class="caja orange">caja orange</div>
+            <div class="caja red">caja red</div>
+            <div class="caja green">caja green</div>
+            <div class="caja blue">caja blue</div>
+            <div class="caja orange">caja orange</div>
+            <div class="caja red">caja red</div>
+            <div class="caja green">caja green</div>
+            <div class="caja blue">caja blue</div>
+            <div class="caja orange">caja orange</div>
         </div>
     </section>
     <p>Santiago Alvarez &copy;</p>
