--- a/08- Maquetacion Flexbox/index.html
+++ b/08- Maquetacion Flexbox/index.html
@@ -18,13 +18,102 @@
             </div>
             <nav id="menu">
                 <ul>
-                    <li><a href="">Inicio</a></li>
-                    <li><a href="">Proyectos</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contacto</a></li>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Proyectos</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contacto</a></li>
                 </ul>
             </nav>
         </header>
+        <!--Inicio contenido-->
+        <section id="content">
+            <aside>
+                <h2>¿Qué quieres ver?</h2>
+                <ul>
+                    <li><a href="#">Webs</a></li>
+                    <li><a href="#">Apps</a></li>
+                    <li><a href="#">Diseños</a></li>
+                    <li><a href="#">Otros</a></li>
+                </ul>
+            </aside>
+            <div id="projects">
+                <article class="project">
+                    <div class="img-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre del proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+                <article class="project">
+                    <div class="img-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre del proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+                <article class="project">
+                    <div class="img-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre del proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+                <article class="project">
+                    <div class="img-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre del proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+                <article class="project">
+                    <div class="img-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre del proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+                <article class="project">
+                    <div class="img-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre del proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+                <article class="project">
+                    <div class="img-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre del proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+                <article class="project">
+                    <div class="img-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre del proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+
+        <!--Fin contenido-->
     </div>
     <!--Inicio container-->
 </body>
