Flexbox de los proyectos

--- a/08- Maquetacion Flexbox/index.html
+++ b/08- Maquetacion Flexbox/index.html
@@ -27,7 +27,7 @@
         </header>
         <!--Inicio contenido-->
         <section id="content">
-            <aside>
+            <aside id="aside">
                 <h2>¿Qué quieres ver?</h2>
                 <ul>
                     <li><a href="#">Webs</a></li>
@@ -39,7 +39,7 @@
             <div id="projects">
                 <article class="project">
                     <div class="img-wrap">
-                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder" />
                     </div>
                     <div class="project-info">
                         <a href="#">Nombre del proyecto</a>
@@ -48,7 +48,7 @@
                 </article>
                 <article class="project">
                     <div class="img-wrap">
-                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder" />
                     </div>
                     <div class="project-info">
                         <a href="#">Nombre del proyecto</a>
@@ -57,7 +57,7 @@
                 </article>
                 <article class="project">
                     <div class="img-wrap">
-                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder" />
                     </div>
                     <div class="project-info">
                         <a href="#">Nombre del proyecto</a>
@@ -66,7 +66,7 @@
                 </article>
                 <article class="project">
                     <div class="img-wrap">
-                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder" />
                     </div>
                     <div class="project-info">
                         <a href="#">Nombre del proyecto</a>
@@ -75,7 +75,7 @@
                 </article>
                 <article class="project">
                     <div class="img-wrap">
-                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder" />
                     </div>
                     <div class="project-info">
                         <a href="#">Nombre del proyecto</a>
@@ -84,7 +84,7 @@
                 </article>
                 <article class="project">
                     <div class="img-wrap">
-                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder" />
                     </div>
                     <div class="project-info">
                         <a href="#">Nombre del proyecto</a>
@@ -93,7 +93,7 @@
                 </article>
                 <article class="project">
                     <div class="img-wrap">
-                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder" />
                     </div>
                     <div class="project-info">
                         <a href="#">Nombre del proyecto</a>
@@ -102,7 +102,7 @@
                 </article>
                 <article class="project">
                     <div class="img-wrap">
-                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder"/>
+                        <img src="https://via.placeholder.com/250x180" alt="imag placeholder" />
                     </div>
                     <div class="project-info">
                         <a href="#">Nombre del proyecto</a>
