Footer con flex

--- a/08- Maquetacion Flexbox/index.html
+++ b/08- Maquetacion Flexbox/index.html
@@ -111,11 +111,13 @@
                 </article>
             </div>
         </section>
-
-
         <!--Fin contenido-->
+        <footer id="footer">
+            <div class="logo">Portafolio</div>
+            <div class="info">Santiago Alvarez &copy;</div>
+        </footer>
     </div>
-    <!--Inicio container-->
+    <!--Fin container-->
 </body>
 
 </html>
