Estilos y css básico

--- a/09- Grid/index.html
+++ b/09- Grid/index.html
@@ -19,7 +19,7 @@
             <div class="caja blue">
                 Tercera caja
             </div>
-            <div class="caja plink">
+            <div class="caja pink">
                 Cuarta caja
             </div>
         </div>
