--- a/09- Grid/index.html
+++ b/09- Grid/index.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="utf-8" />
-        <title>Css Grid</title>
-        <link rel="stylesheet" type="text/css" href="style.css" />
-    </head>
-    <body>
-        <h1>Css Grid</h1>
-        <h2>Grid como otra forma para hacer el diseño de una pagina</h2>
 
-        <div class="layout">
-            <div class="caja red">
-                Primera caja
-            </div>
-            <div class="caja green">
-                Segunda caja
-            </div>
-            <div class="caja blue">
-                Tercera caja
-            </div>
-            <div class="caja pink">
-                Cuarta caja
-            </div>
+<head>
+    <meta charset="utf-8" />
+    <title>Css Grid</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+
+<body>
+    <h1>Css Grid</h1>
+    <h2>Grid como otra forma para hacer el diseño de una pagina</h2>
+
+    <div class="layout">
+        <div class="caja red">
+            Primera caja
         </div>
+        <div class="caja green">
+            Segunda caja
+        </div>
+        <div class="caja blue">
+            Tercera caja
+        </div>
+        <div class="caja pink">
+            Cuarta caja
+        </div>
+        <div class="caja quinta">
+            quinta caja
+        </div>
+        <div class="caja sexta">
+            Sexta caja
+        </div>
+        
+    </div>
 
-        <p>Este Parrafo no se mueve</p>
-    </body>
+    <p>Este Parrafo no se mueve</p>
+</body>
+
 </html>
