--- a/09- Grid/index.html
+++ b/09- Grid/index.html
@@ -1,13 +1,45 @@
+
 <!DOCTYPE html>
 <html lang="es">
 
 <head>
     <meta charset="utf-8" />
     <title>Css Grid</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
+
+    <div id="website">
+        <header id="cabecera">
+            <h1>Titulo de la web</h1>
+        </header>
+
+        <nav id="menu">
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Pagina 2</a></li>
+                <li><a href="#">Pagina 3</a></li>
+                <li><a href="#">Pagina 4</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+
+        <section id="contenido">
+            <article>Articulo 1</article>
+            <article>Articulo 2</article>
+            <article>Articulo 3</article>
+            <article>Articulo 4</article>
+        </section>
+
+        <aside id="lateral">
+            <h2>Barra Lateral</h2>
+        </aside>
+
+        <footer id="pie-pagina">Santiago Alvarez $copy;</footer>
+    </div>
+
     <h1>Css Grid</h1>
     <h2>Grid como otra forma para hacer el diseño de una pagina</h2>
 
