--- a/09- Grid/index.html
+++ b/09- Grid/index.html
@@ -11,9 +11,41 @@
 
 <body>
 
+    <!--WEBSITE CON GRIDAREAS-->
+    <div id="website-areas">
+        <header id="cabecera">
+            <h1>Ejercicio con GridAreas</h1>
+        </header>
+
+        <nav id="menu">
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Pagina 2</a></li>
+                <li><a href="#">Pagina 3</a></li>
+                <li><a href="#">Pagina 4</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+
+        <section id="contenido">
+            <article>Articulo 1</article>
+            <article>Articulo 2</article>
+            <article>Articulo 3</article>
+            <article>Articulo 4</article>
+        </section>
+
+        <aside id="lateral">
+            <h2>Barra Lateral</h2>
+        </aside>
+
+        <footer id="pie-pagina">Santiago Alvarez $copy;</footer>
+    </div>
+    <!-- fin WEBSITE CON GRIDAREAS-->
+    <br>
+<hr>
     <div id="website">
         <header id="cabecera">
-            <h1>Titulo de la web</h1>
+            <h1>Titulo de la webcon grid</h1>
         </header>
 
         <nav id="menu">
