--- a/11 - Boostrap4/index.html
+++ b/11 - Boostrap4/index.html
@@ -8,8 +8,54 @@
         <title>Boostrap4</title>
     </head>
     <body>
-        <h1>Boostrap4</h1>
-        <h2>Framework de Css</h2>
+        <div class="container border">
+            <div class="row">
+                <header id="header" class="col-12 bg-primary text-white p-2 pl-5">
+                    <h1>Boostrap4 </h1>
+                </header>
+
+                <nav id="menu" class="col-12 bg-secondary text-white">
+                    <ul class="row w-50">
+                        <li class="col">Inicio</li>
+                        <li class="col">Pagina1</li>
+                        <li class="col">Pagina2</li>
+                        <li class="col">Pagina3</li>
+                        <li class="col">Contacto</li>
+                    </ul>
+                </nav>
+
+                <section id="content" class="row col-12">
+                    <section id="products" class="col-9 border">
+                        <h2>Productos</h2>
+                        <hr>
+                        <div class="items">
+                            <div class="row">
+                                <div class="item col bg-primary m-2">Producto</div>
+                                <div class="item col bg-warning m-2">Producto</div>
+                                <div class="item col bg-danger m-2">Producto</div>
+                            </div>
+                            <div class="row">
+                                <div class="item col bg-primary m-2">Producto</div>
+                                <div class="item col bg-warning m-2">Producto</div>
+                                <div class="item col bg-danger m-2">Producto</div>
+                            </div>
+                            <div class="row">
+                                <div class="item col bg-primary m-2">Producto</div>
+                                <div class="item col bg-warning m-2">Producto</div>
+                                <div class="item col bg-danger m-2">Producto</div>
+                                <div class="item col bg-danger m-2">Producto</div>
+                            </div>
+                        </div>
+                    </section>
+                    <aside class="col-3 border">
+                        <h2>Barra Lateral</h2>
+                    </aside>
+                </section>
+                <footer class="col-lg-12 bg-info">
+                    Santiago Alvarez &copy;
+                </footer>
+            </div>
+        </div>
 
         <script type="text/javascript" src="Jquery/jquery-3.5.1.min.js"></script>
         <script type="text/javascript" src="bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
