--- a/11 - Boostrap4/index.html
+++ b/11 - Boostrap4/index.html
@@ -45,6 +45,10 @@
                                 <div class="item col bg-danger m-2">Producto</div>
                                 <div class="item col bg-danger m-2">Producto</div>
                             </div>
+                            <div class="row justify-content-center">
+                                <div class="item col-3 bg-primary m-2">Producto</div>
+                                <div class="item col-3 bg-warning m-2">Producto</div>
+                            </div>
                         </div>
                     </section>
                     <aside class="col-3 border">
