--- a/11 - Boostrap4/index.html
+++ b/11 - Boostrap4/index.html
@@ -45,7 +45,7 @@
                                 <div class="item col bg-danger m-2">Producto</div>
                                 <div class="item col bg-danger m-2">Producto</div>
                             </div>
-                            <div class="row justify-content-center">
+                            <div class="row justify-content-centergi">
                                 <div class="item col-3 bg-primary m-2">Producto</div>
                                 <div class="item col-3 bg-warning m-2">Producto</div>
                             </div>
@@ -53,6 +53,17 @@
                     </section>
                     <aside class="col-3 border">
                         <h2>Barra Lateral</h2>
+                        <div class="lateral row bg-light align-items-center">
+                            <div class="col-4 bg-primary align-self-end">
+                                elemento1
+                            </div>
+                            <div class="col-4 bg-secondary align-self-start">
+                                elemento1
+                            </div>
+                            <div class="col-4 bg-danger">
+                                elemento1
+                            </div>
+                        </div>
                     </aside>
                 </section>
                 <footer class="col-lg-12 bg-info">
