propiedad order, ordenar elementos

--- a/11 - Boostrap4/index.html
+++ b/11 - Boostrap4/index.html
@@ -54,14 +54,14 @@
                     <aside class="col-3 border">
                         <h2>Barra Lateral</h2>
                         <div class="lateral row bg-light align-items-center">
-                            <div class="col-4 bg-primary align-self-end">
+                            <div class="col-4 bg-primary order-3">
                                 elemento1
                             </div>
-                            <div class="col-4 bg-secondary align-self-start">
-                                elemento1
+                            <div class="col-4 bg-success order-1">
+                                elemento2
                             </div>
-                            <div class="col-4 bg-danger">
-                                elemento1
+                            <div class="col-4 bg-danger order-2">
+                                elemento3 
                             </div>
                         </div>
                     </aside>
