--- a/11 - Boostrap4/index.html
+++ b/11 - Boostrap4/index.html
@@ -49,6 +49,12 @@
                                 <div class="item col-3 bg-primary m-2">Producto</div>
                                 <div class="item col-3 bg-warning m-2">Producto</div>
                             </div>
+                            <div class="row">
+                                <div class="item col-3 bg-primary m-2">Producto</div>
+                                <div class="item col-3 bg-warning ">Producto</div>
+                                <div class="item col-3 bg-danger offset-1">Producto</div>
+                                <div class="item col-2 bg-success offset-1 ">Producto</div>
+                            </div>
                         </div>
                     </section>
                     <aside class="col-3 border">
