responsive para el contenido

--- a/11 - Boostrap4/index.html
+++ b/11 - Boostrap4/index.html
@@ -24,15 +24,15 @@
                     </ul>
                 </nav>
 
-                <section id="content" class="row col-12">
+                <section id="content-fluid" class="row col-12">
                     <section id="products" class="col-9 border">
                         <h2>Productos</h2>
                         <hr>
                         <div class="items">
                             <div class="row">
-                                <div class="item col bg-primary m-2">Producto</div>
-                                <div class="item col bg-warning m-2">Producto</div>
-                                <div class="item col bg-danger m-2">Producto</div>
+                                <div class="item col col-lg col-md-12 col-sm-12 bg-primary">Producto</div>
+                                <div class="item col col-lg col-md-6 col-sm-6 bg-warning ">Producto</div>
+                                <div class="item col col-lg col-md-6 col-sm-6 bg-danger ">Producto</div>
                             </div>
                             <div class="row">
                                 <div class="item col bg-primary m-2">Producto</div>
