--- a/11 - Boostrap4/index.html
+++ b/11 - Boostrap4/index.html
@@ -16,11 +16,11 @@
 
                 <nav id="menu" class="col-12 bg-secondary text-white">
                     <ul class="row w-50">
-                        <li class="col">Inicio</li>
-                        <li class="col">Pagina1</li>
-                        <li class="col">Pagina2</li>
-                        <li class="col">Pagina3</li>
-                        <li class="col">Contacto</li>
+                        <li class="col-xs-12 col-sm-12 col-md">Inicio</li>
+                        <li class="col-xs-12 col-sm-12 col-md">Pagina1</li>
+                        <li class="col-xs-12 col-sm-12 col-md">Pagina2</li>
+                        <li class="col-xs-12 col-sm-12 col-md">Pagina3</li>
+                        <li class="col-xs-12 col-sm-12 col-md">Contacto</li>
                     </ul>
                 </nav>
 
@@ -45,7 +45,7 @@
                                 <div class="item col bg-danger m-2">Producto</div>
                                 <div class="item col bg-danger m-2">Producto</div>
                             </div>
-                            <div class="row justify-content-centergi">
+                            <div class="row justify-content-center">
                                 <div class="item col-3 bg-primary m-2">Producto</div>
                                 <div class="item col-3 bg-warning m-2">Producto</div>
                             </div>
@@ -60,13 +60,13 @@
                     <aside class="col-3 border">
                         <h2>Barra Lateral</h2>
                         <div class="lateral row bg-light align-items-center">
-                            <div class="col-4 bg-primary order-3">
+                            <div class="col-4 bg-primary order-3 col-sm-12">
                                 elemento1
                             </div>
-                            <div class="col-4 bg-success order-1">
+                            <div class="col-4 bg-success order-1 col-sm-12">
                                 elemento2
                             </div>
-                            <div class="col-4 bg-danger order-2">
+                            <div class="col-4 bg-danger order-2 col-sm-12">
                                 elemento3 
                             </div>
                         </div>
