ocultar y mostrar en vista responsive

--- a/11 - Boostrap4/index.html
+++ b/11 - Boostrap4/index.html
@@ -25,7 +25,7 @@
                 </nav>
 
                 <section id="content-fluid" class="row col-12">
-                    <section id="products" class="col-9 border">
+                    <section id="products" class="col-12 col-sm-12 col-md-9 border">
                         <h2>Productos</h2>
                         <hr>
                         <div class="items">
@@ -57,7 +57,8 @@
                             </div>
                         </div>
                     </section>
-                    <aside class="col-3 border">
+                    <!--d-block, para que se vea en todas las pantallas-->
+                    <aside class="col-3 border hidden-xs d-none d-sm-none d-md-block">
                         <h2>Barra Lateral</h2>
                         <div class="lateral row bg-light align-items-center">
                             <div class="col-4 bg-primary order-3 col-sm-12">
