--- a/11 - Boostrap4/herramientas.html
+++ b/11 - Boostrap4/herramientas.html
@@ -10,13 +10,13 @@
     <body>
         <h1>Herramientas disponibles en boostrap4</h1>
         <div class="container" style="height:500px;">
-            <div class=" bg-warning float-left  float-sm-none float-md-left caja  w-25 h-25 border border-secondary rounded-top">
+            <div class=" bg-warning float-left  float-sm-none float-md-left caja  w-25 h-25 border border-secondary rounded-top m-2">
                 Dentro la caja
             </div>
-            <div class="text-white bg-primary float-left caja w-25 h-25 border border-primary rounded-top">
+            <div class="text-white bg-primary float-left caja w-25 h-25 border border-primary rounded-top mb-2 ml-2 mr-3">
                 Dentro la caja
             </div>
-            <div class="text-secondary bg-secondary float-left caja w-25 h-25 border border-success rounded-top">
+            <div class="text-secondary bg-secondary float-left caja w-25 h-25 border border-success rounded-top mx-auto p-3 my-2">
                 Dentro la caja
             </div>
         </div>
