--- a/11 - Boostrap4/herramientas.html
+++ b/11 - Boostrap4/herramientas.html
@@ -16,7 +16,7 @@
             <div class="text-white bg-primary float-left caja w-25 h-25 shadow-lg border border-primary rounded-top mb-2 ml-2 mr-3">
                 Dentro la caja
             </div>
-            <div class="text-secondary bg-secondary float-left caja w-25 h-25 shadow border border-success rounded-top mx-auto p-3 my-2">
+            <div class=" invisible text-secondary bg-secondary float-left caja w-25 h-25 shadow border border-success rounded-top mx-auto p-3 my-2">
                 Dentro la caja
             </div>
         </div>
