--- a/11 - Boostrap4/herramientas.html
+++ b/11 - Boostrap4/herramientas.html
@@ -20,6 +20,9 @@
                 Dentro la caja
             </div>
         </div>
+        <hr>
+
+        <p class="display-4 font-italic text-uppercase text-center"> Esto es un texto</p>
 
         <script type="text/javascript" src="Jquery/jquery-3.5.1.min.js"></script>
         <script type="text/javascript" src="bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
