--- a/11 - Boostrap4/herramientas.html
+++ b/11 - Boostrap4/herramientas.html
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        <link rel="stylesheet" href="bootstrap-4.5.0-dist/css/bootstrap.min.css"/>
-        <title>Boostrap4</title>
-    </head>
-    <body>
-        <h1>Herramientas disponibles en boostrap4</h1>
-        <div class="container" style="height:500px;">
-            <div class=" bg-warning float-left  float-sm-none float-md-left shadow caja  w-25 h-25 border border-secondary rounded-top m-2">
-                Dentro la caja
-            </div>
-            <div class="text-white bg-primary float-left caja w-25 h-25 shadow-lg border border-primary rounded-top mb-2 ml-2 mr-3">
-                Dentro la caja
-            </div>
-            <div class=" invisible text-secondary bg-secondary float-left caja w-25 h-25 shadow border border-success rounded-top mx-auto p-3 my-2">
-                Dentro la caja
-            </div>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="bootstrap-4.5.0-dist/css/bootstrap.min.css" />
+    <title>Boostrap4</title>
+</head>
+
+<body>
+    <h1>Herramientas disponibles en boostrap4</h1>
+    <div class="container" style="height:500px;">
+        <div
+            class=" bg-warning float-left  float-sm-none float-md-left shadow caja  w-25 h-25 border border-secondary rounded-top m-2">
+            Dentro la caja
         </div>
-        <hr>
+        <div
+            class="text-white bg-primary float-left caja w-25 h-25 shadow-lg border border-primary rounded-top mb-2 ml-2 mr-3">
+            Dentro la caja
+        </div>
+        <div
+            class=" invisible text-secondary bg-secondary float-left caja w-25 h-25 shadow border border-success rounded-top mx-auto p-3 my-2">
+            Dentro la caja
+        </div>
+    </div>
+    <hr>
 
-        <p class="display-4 font-italic text-uppercase text-center"> Esto es un texto</p>
+    <p class="display-4 font-italic text-uppercase text-center"> Esto es un texto</p>
+    <hr>
 
-        <script type="text/javascript" src="Jquery/jquery-3.5.1.min.js"></script>
-        <script type="text/javascript" src="bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
-    </body>
+    <kbd>Ctrl + v</kbd> Pegar el texto
+    <code>
+            <pre> 
+                if($hola == "mundo"){
+                    echo "Hola mundo"
+                }
+            </pre>
+        </code>
+    <script type="text/javascript" src="Jquery/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
+</body>
+
 </html>
