--- a/11 - Boostrap4/componentes.html
+++ b/11 - Boostrap4/componentes.html
@@ -70,6 +70,19 @@
                 </nav>
             </header>
         </div>
+
+        <div class="row">
+            <div class="col-md-8 mt-3">
+                <div class="alert alert-success alert/dismissble fade show">
+                    <strong>Te has registrado</strong>
+
+                    <button type="button" class="close" data-dismiss="alert" >
+                        <span >&times;</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+
     </div>
     <script type="text/javascript" src="Jquery/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
