--- a/11 - Boostrap4/componentes.html
+++ b/11 - Boostrap4/componentes.html
@@ -73,6 +73,19 @@
 
         <div class="row">
             <div class="col-md-8 mt-3">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item">
+                            <a href="#">Inicio</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a href="#">Desarrollo web</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a href="#">Desarrollo JS</a>
+                        </li>
+                    </ol>
+                </nav>
                 <div class="alert alert-success alert/dismissble fade show">
                     <strong>Te has registrado</strong>
 
