--- a/11 - Boostrap4/componentes.html
+++ b/11 - Boostrap4/componentes.html
@@ -270,6 +270,15 @@
             </div>
         </div>
 
+        <!--Collapse-->
+        <a href="#informacion" class="btn btn-success" data-toggle="collapse" role="button">
+            Mostrar Informacion
+        </a>
+        <div class="collapse" id="informacion">
+            <div class="card card-body bg-dark text-white mt-2">
+                Esta es la Informacion oculta
+            </div>
+        </div>
 
     </div>
     <script type="text/javascript" src="Jquery/jquery-3.5.1.min.js"></script>
